chore: downgrade to Spring Boot 2.7 + JDK 8 (target JDK8 legacy projects)
SB 2.7 is the last 2.x (SB 3 needs JDK 17) — the most common SB version
for JDK 8 projects. ai4j-starter (compiled on SB 2.3) is natively
compatible on the same 2.x line; verified end-to-end on 2.7.18 + JDK 8.

- pom: SB 3.2.5 -> 2.7.18, java.version 17 -> 1.8
- PgVectorSchemaInitializer: jakarta.annotation -> javax (SB 2.7)
- KnowledgeIngestionService: InputStream.readAllBytes() (Java 9) -> readAll helper
- RagQueryService: String.isBlank() (Java 11) -> trim().isEmpty()

Blog: rename to '为你的 JDK8 老项目，增加企业级的 RAG 系统'; update SB
refs (3.2 -> 2.7, JDK8 angle); keep SB 3 note for upgraders.